objects/Pension_Loan_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Plan_Sponsors__c</fullName>
        <label>Additional Plan Sponsors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bad_Dates__c</fullName>
        <formula>IF( Next_Payment_Due_Date_1__c &gt; Next_Reminder_Email_1__c, &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Dates?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Pension_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pension_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_Complete__c</fullName>
        <label>Documents Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_Received__c</fullName>
        <label>EIN Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date_1__c</fullName>
        <label>End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_2__c</fullName>
        <label>End Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_3__c</fullName>
        <label>End Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <formula>Original_Entity_Page__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Tax_Year_End__c</fullName>
        <label>First Tax Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion in Progress</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Dissolution In Progress</fullName>
                </value>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount_1__c</fullName>
        <label>Loan Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_2__c</fullName>
        <label>Loan Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_3__c</fullName>
        <label>Loan Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_1__c</fullName>
        <label>Loan Holder 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_2__c</fullName>
        <label>Loan Holder 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_3__c</fullName>
        <label>Loan Holder 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_First_Name_1__c</fullName>
        <label>Loan Holder First Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_First_Name_2__c</fullName>
        <label>Loan Holder First Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_First_Name_3__c</fullName>
        <label>Loan Holder First Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Reminder_Email_1__c</fullName>
        <label>Loan Reminder Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loan_Reminder_Email_2__c</fullName>
        <label>Loan Reminder Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loan_Reminder_Email_3__c</fullName>
        <label>Loan Reminder Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date_1__c</fullName>
        <label>Next Payment Due Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date_2__c</fullName>
        <label>Next Payment Due Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date_3__c</fullName>
        <label>Next Payment Due Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Email_1__c</fullName>
        <label>Next Reminder Email 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Email_2__c</fullName>
        <label>Next Reminder Email 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Email_3__c</fullName>
        <label>Next Reminder Email 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson</fullName>
                </value>
                <value>
                    <fullName>Client Formed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Entity_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Entity Page</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipName>Pension_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_1__c</fullName>
        <label>Payment Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_2__c</fullName>
        <label>Payment Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_3__c</fullName>
        <label>Payment Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Adoption_Date__c</fullName>
        <label>Plan Adoption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Loans__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Loans</label>
        <referenceTo>Plan_Loans__c</referenceTo>
        <relationshipLabel>Pension Loan Reminders</relationshipLabel>
        <relationshipName>Pension_Loan_Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Sponsor</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipName>Pension_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit Sharing Plan</fullName>
                </value>
                <value>
                    <fullName>Solo 401(k)</fullName>
                </value>
                <value>
                    <fullName>Money Purchase Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Received__c</fullName>
        <label>Questionnaire Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Questionnaire_to_Processor__c</fullName>
        <label>Questionnaire to Processor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Opt_Out_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Opt Out 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Opt_Out_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Opt Out 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Opt_Out_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Opt Out 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Period_End__c</fullName>
        <label>SLA Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Period_Start__c</fullName>
        <label>SLA Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documents Only Service</fullName>
                </value>
                <value>
                    <fullName>3rd Party Administrative Service</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>No Service</fullName>
                </value>
                <value>
                    <fullName>Initial 3rd Party Administrative Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Airborne</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Full Load</fullName>
                </value>
                <value>
                    <fullName>Will Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Entity_EIN__c</fullName>
        <label>Sponsor Entity EIN#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_1__c</fullName>
        <label>Start Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_2__c</fullName>
        <label>Start Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_3__c</fullName>
        <label>Start Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_First_Name__c</fullName>
        <label>Trustee First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Last_Name__c</fullName>
        <label>Trustee Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_Phone_Number__c</fullName>
        <label>Trustee Phone Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_End_Month__c</fullName>
        <formula>CASE(MONTH( First_Tax_Year_End__c  ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year End Month</label>
        <type>Text</type>
    </fields>
    <label>Pension Loan Reminder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Plan_Sponsor__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>SLA__c</columns>
        <columns>SLA_Period_Start__c</columns>
        <columns>SLA_Period_End__c</columns>
        <columns>Case__c</columns>
        <columns>FU__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Pension_Loan_Reminder</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Loan Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pension Loan Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>